syntax = "proto3";

package header;

message Configuration {
	string version = 2;
	int32 term = 3;
	string cluster = 4; // ID of the cluster

	int32 total_partitions = 5;
	int32 next_term = 6;

	map<string, WorkerInfo> workers = 7; // map worker id to partition
}

message WorkerInfo {
	string id = 5;
	repeated int32 partitions = 7;
	string host = 8;
}

message GetConfigRequest {
	string version = 2;
	int32 term = 3;
	string cluster = 4;
}

message WorkerRequest {
	string version = 2;
	int32 term = 3;
	string cluster = 4;
	string id = 5;
	string host = 6;
}

message Empty {}

service Coordinator {
	rpc GetConfig(GetConfigRequest) returns (Configuration) {}
	rpc Leave(WorkerRequest) returns (Empty) {}
	rpc Rebalance(WorkerRequest) returns (stream Configuration) {} // pull rebalance
	rpc Accept(WorkerRequest) returns (Empty) {}
}

service Worker {
	rpc GetConfig(GetConfigRequest) returns (Configuration) {}
}

service Hello {
	rpc Hello(GetConfigRequest) returns (WorkerInfo) {}
}
